bg-image added to login page

--- a/i-tech_knowledge_base/public/css/styles.css
+++ b/i-tech_knowledge_base/public/css/styles.css
@@ -34,3 +34,11 @@ li{
 /**************Footer*************/
 
 /**************** Login ****************/
+.loginbody
+  {
+      background-image: url("../images/cover2.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: auto;
+  }
+
